perform a bit better.

* Added a new utility: Reaper. This can be used to clean up parent lock nodes so that they don't
stay around as garbage. See the Utilities wiki for details: https://github.com/Netflix/curator/wiki/Utilities

* compressed() wasn't setting parents-create bool

* Some problems with recent namespace changes - null namespace wasn't being handled

1.1.12/1.0.13 - June 5, 2012
============================
* Pull Request 81: Avoid invalid ipv6 localhost addresses

* Another big bug: guaranteed deletions were not working with namespaces.

1.1.11/1.0.12 - June 1, 2012
============================
* MAJOR BUG FIX!!!! Many of the Curator recipes rely on the internal class LockInternals. It has
a bug that exhibits when the ZooKeeper cluster is unstable. There is an edge case that causes
LockInternals to leak a node in the lock path that it is managing. This results in a deadlock. The
leak occurs when retries are exhausted. NOTE: TestLockCleanlinessWithFaults now tests for this
condition.

* Added some missing combinations in the backgrounding API

* Added QueueSharder utility. Due to limitations in ZooKeeper's transport layer, a single queue
will break if it has more than 10K-ish items in it. This class provides a facade over multiple
distributed queues. It monitors the queues and if any one of them goes over a threshold, a new
queue is added. Puts are distributed amongst the queues.

* Issue 80: Check for null data before decompressing data in getData().

* Merge from user bbeck - enhanced the testing in-memory ZK server to handle some edge cases. A nice
benefit is that it starts up faster. Thanks Brandon!

1.1.10/1.0.11 - May 17, 2012
============================
* Generalized the ProtectedEphemeralSequential so that it works with any create mode.
withProtectedEphemeralSequential() is deprecated in favor of the new method withProtection().

* Update all uses of Preconditions to make sure they print a reasonable diagnostic message.
