@@ -19,6 +19,8 @@ stay around as garbage. See the Utilities wiki for details: https://github.com/N
 
 * Some problems with recent namespace changes - null namespace wasn't being handled
 
+* Unit tests should be a lot less noisy. A system property now turns off most internal error logging.
+
 1.1.12/1.0.13 - June 5, 2012
 ============================
 * Pull Request 81: Avoid invalid ipv6 localhost addresses
